# gelf-kafka-listener

./: Cargo.toml  README.md
.github/workflows/: published_build.yml  rust_build.yml
src/: main.rs
src/gelf/: mod.rs
