[package]
name = "gelf-kafka-listener"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.34.0", features = ["tokio"] }
uuid = { version = "1.4.1", features = ["v4"] }
clap = "2.34.0"
warp = "0.3"
bytes = "1.0"
daemonize = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
flate2 = "1.0"
